--- a/proyectoIntegrador/package.json
+++ b/proyectoIntegrador/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proyectointegrador",
+  "name": "proyecto-integrador",
   "private": true,
   "version": "0.0.0",
   "type": "module",
